# predoc-coding-sample

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.sh  run_real.sh
.github/workflows/: ci.yml
configs/: config.yaml  config_real.yaml
data/: 6614_file_information.rtf
data/sample/: raw_panel.parquet
docs/: data_dictionary.md  pipeline_architecture.md  project_documentation.md
notebooks/archive/: clean_data_long_panel.ipynb  frailty_main.ipynb  k_means.ipynb
output/metrics/: metrics.json
output/tables/: tab01_summary_stats.csv  tab02_frailty_by_wave.csv  tab03_robustness.csv  table1.csv
paper/: README.md  build.sh
paper/tex/: macros.tex  main.tex  refs.bib
paper/tex/sections/: 01_abstract.tex  02_introduction.tex  03_data_overview.tex  04_clustering.tex  05_health_types.tex  06_employment_dynamics.tex  07_modeling.tex  08_conclusion.tex  09_appendix.tex
paper/tex/tables/: tab01_health_type_distribution.tex  tab02_earnings_employment.tex  tab03_education_by_type.tex
src/: cli.py  cli_real.py
src/analysis/: __init__.py  figures.py  figures_real.py  tables.py  tables_real.py
src/pipeline/: 05_report.py  __init__.py  clean.py  cluster.py  construct_panel.py  estimate.py  ingest_real.py  make_sample_data.py  report.py  report_real.py
src/utils/: __init__.py  config.py  io.py  metrics.py  seed.py  validation.py
tests/: conftest.py  test_determinism.py  test_real_pipeline.py  test_schema.py  test_smoke.py
